tests/endtoend/failure/expected/error_arrayreturn.compile.out
error_arrayreturn.silly:1:24: error: parse error
    1 | FUNCTION foo( ) : INT32[4]
      |                        ^
error_arrayreturn.silly:5:5: error: parse error
    5 |     RETURN r;
      |     ^
error_arrayreturn.silly:5:13: error: parse error
    5 |     RETURN r;
      |             ^
error_arrayreturn.silly:6:1: error: parse error
    6 | };
      | ^
